--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -31,3 +31,6 @@ jobs:
     - name: Test with pytest
       run: |
         pytest test.py
+    - name: Run script
+      run: |
+        python script.py
